# cidni

./: README.md  pyproject.toml
cidni/: __main__.py
cidnilib/python/: requirements.txt  setup.py
cidnilib/python/cidnilib/: __init__.py  dssplitter.py  filebasedds.py  inmemds.py  inmemks.py  main.py  picklefileds.py  typers.py
cidnilib/python/cidnilib/tests/: test_dssplitter.py  test_filebasedds.py  test_inmemds.py  test_inmemks.py  test_picklefileds.py
cli/: pyproject.toml  requirements.txt
cli/cidni/: __main__.py
cli/cidni/tests/: test_cli.py
